# mpi_practice

./: .gitignore  CMakeLists.txt  README.md  agent.json  main.cpp  run.sh
include/: CMakeLists.txt  agent.cpp  agent.h  ball.cpp  ball.h  controller.cpp  controller.h  generate_agent.cpp  generate_agent.h  id_provider.cpp  id_provider.h  parsejson.cpp  parsejson.h  root.cpp  root.h  simulator.cpp  simulator.h  world.cpp  world.h
